fixed the styling on mobile phone

--- a/cards.css
+++ b/cards.css
@@ -75,6 +75,9 @@
   margin-bottom: 200px;
   width: 100vw;
 }
+#tef {
+  object-position: -500px;
+}
 
 @media screen and (max-width: 640px) {
   .my-image {
